# SmartNOLA

./: .gitignore  CMakeLists.txt  CMakePresets.json
GeometryLib/: CMakeLists.txt  GeometryLib.cpp  GeometryLib.h  IO.cpp  IO.h  cmake_definition.h.in  interact.cpp  main.cpp
GeometryLib/vis/: PlaneNode.cpp  PlaneNode.h  RenderObject.cpp  RenderObject.h  camera.cpp  camera.h  status_util.cpp  status_util.h  window_util.h
imgui/: CMakeLists.txt
shaders/: default_vs.glsl  phong_fs.glsl  phong_vs.glsl  ui_fs.glsl  ui_vs.glsl
